discussion/kv_engine/153975/153975_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: Add support for Group Commit

Group Commit coalesces transactions in the WAL by grouping transactions
at the point of WAL fsync. If there are other writer threads wanting to
do a transaction, the current transaction will stall waiting for other
transactions to go. If there are no waiting transactions, the current
transaction will fsync and wait for all pending fsyncs to complete their
transactions before completing its transaction and trying write cache
flush.

Add magma_enable_group_commit and magma_wal_sync_time.

Change-Id: I23ae7c014691a873d9201021998fc062cc0b6549

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2021-05-20 17:51:17.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-20 18:54:34.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/9068/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:445:28: error: no member named "EnableGroupCommit" in "magma::Magma::Config" [clang-diagnostic-error]
    configuration.magmaCfg.EnableGroupCommit =
                           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/9068/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:445:28:
error: no member named "EnableGroupCommit" in "magma::Magma::Config" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/9068/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35939/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(445): error C2039: "EnableGroupCommit": is not a member of "magma::Magma::Config" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35939/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30720/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:445:28:
error: no member named "EnableGroupCommit" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30720/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10766/ : FAILURE

Compile error at [2021-05-20T18:16:21.791Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:445:28:
error: ?struct magma::Magma::Config? has no member named ?EnableGroupCommit?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10766/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9691/ : FAILURE

Compile error at [2021-05-20T18:12:21.069Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:445:28:
error: no member named "EnableGroupCommit" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9691/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11023/ : FAILURE

Compile error at [2021-05-20T18:32:38.502Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:445:28:
error: no member named "EnableGroupCommit" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11023/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18575/ : FAILURE

Compile error at [2021-05-20T18:44:23.280Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:445:28:
error: no member named "EnableGroupCommit" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18575/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7620/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10623/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
